# Yocto

1. hello_recipe/: Readme  hello.bb
1. hello_recipe/files/: hello.c
10. cmake_hello_recipe/: chello_0.1.bb
10. cmake_hello_recipe/files/: CMakeLists.txt  chello.c
2. hellomakefile_recipe/: Readme  hellomakefile_0.1.bb
2. hellomakefile_recipe/files/: Makefile  hellomakefile  hellomakefile.c
3. mystatic_cal_recipe/: Readme
3. mystatic_cal_recipe/files/: cal.c
4. mydynamic_cal_recipe/: Readme
4. mydynamic_cal_recipe/files/: lib_cal.h
5. Depends_recipe/: Readme
5. Depends_recipe/files/: print.c
6. Rdepends_recipe/: Readme  hellosh_o.1.bb
7. auto_hello_recipe/: Readme  myhello_0.1.bb
7. auto_hello_recipe/files/: Makefile.am  configure.ac  myhello.c
7. auto_hello_recipe/files/.deps/: add.Po  app.Po  divide.Po  helloauto.Po  multiply.Po  myhello.Po  subtract.Po
9. auto_static_calci/files/: Makefile.am  configure.ac
